--- a/skin/public/volcano.css
+++ b/skin/public/volcano.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0 10px;
   font-family: sans-serif;
-  background: #6c7994;
+  background: url("bgpattern.png") repeat #99CBD1;
 }
 #container {
   max-width: 1200px;
