--- a/skin/layout.haml
+++ b/skin/layout.haml
@@ -13,19 +13,18 @@
       #header
         %a{href: "/"}
           %h1
-            How To Node
+            EMU Marketing 
           %h2.tagline
-            The zen of coding in node.JS
+            We make web pages. This is us talking about that.
       = content
       
       #footer.clearfix
-        %p Site Design and code is &copy; 2010 to Tim Caswell under the MIT license. Content and articles are copyrighted to the individual authors. All code snippets used in the examples are in the public domain.
         %p Wheat running on node #{process.version}
-    :script
-      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    :script
-      try {
-      var pageTracker = _gat._getTracker("UA-12824411-1");
-      pageTracker._trackPageview();
-      } catch(err) {}
+-#    :script
+-#      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+-#      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+-#    :script
+-#      try {
+-#      var pageTracker = _gat._getTracker("UA-12824411-1");
+-#      pageTracker._trackPageview();
+-#      } catch(err) {}
